<resources>
    <string name="app_name">Store Room</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="Restore">Restore</string>
    <string name="Update">Update</string>
    <string name="storeroom_app">StoreRoom App</string>
    <string name="company_information">Company Information</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="add_company_logo">Add Company Logo</string>
    <string name="counting">Counting</string>
    <string name="add">Add</string>
    <string name="delivery_number">Delivery Number</string>
    <string name="finish">Finish</string>
    <string name="please_sign_it">Please sign it</string>
    <string name="description">Description</string>
    <string name="entrance_process">Entrance Process</string>
    <string name="outgoing_process">Outgoing Process</string>
    <string name="counting_process">Counting Process</string>
    <string name="return_process">Return Process</string>
    <string name="entrance">Entrance</string>
    <string name="help">Help</string>
    <string name="ok">Ok</string>
    <string name="csv_file_added">Csv File Added</string>
    <string name="show_data_detail">Show Data Detail</string>
    <string name="import_new_data">Import new Data</string>
    <string name="outgoing">Outgoing</string>
    <string name="order_code">Order Code</string>
    <string name="goods">item</string>
    <!--<string name="actions">Rückgabe prozess</string>-->
    <string name="actions">Actions</string>
    <string name="entries_of_item">Entries Of Item</string>
    <string name="outgoing_item">Outgoing Item</string>
    <string name="item_counting">Item Counting</string>
    <string name="attache_photos">Attache Photos</string>
    <string name="receiver_signature">Receiver Signature</string>
    <string name="save_and_get_driver_signature">save and get driver Signature</string>
    <string name="driver_signature">Driver Signature</string>
    <string name="new_counting_info">New Counting Info</string>
    <string name="new_entrance_info">New Entrance Info</string>
    <string name="new_outgoing_info">New Outgoing Info</string>
    <string name="add_new_item">Add new item</string>
    <string name="cancel">Cancel</string>
    <string name="new_return_info">New Return Info</string>
    <string name="if_you_want_to_continue_one_of_your_n_previous_counting_process_n_please_select_from_the_list_below">If you want to continue one of your   previous counting process,   please select from the list below:</string>
    <string name="add_new_counting_process">Add new counting process</string>
    <string name="splitter">Splitter</string>
    <string name="which_splitter_has_been_used_in_your_csv_file">Which Splitter has been used in your csv file?</string>
    <string name="comma">Comma</string>
    <string name="semicolon">Semicolon</string>
    <string name="delete_data">Delete Data</string>
    <string name="do_you_want_to_delete_data_and_exit_from_your_account">Do you want to delete data and exit from your account?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="entrance_item">Entrance Item</string>
    <string name="if_you_want_to_continue_one_of_your_n_previous_entrance_process_n_please_select_from_the_list_below">If you want to continue one of your   previous entrance process,   please select from the list below:</string>
    <string name="add_new_entrance_process">Add new entrance Process</string>
    <string name="if_you_want_to_continue_one_of_your_n_previous_exit_process_n_please_select_from_the_list_below">If you want to continue one of your   previous exit process,   please select from the list below:</string>
    <string name="add_new_outgoing_process">Add new Outgoing Process</string>
    <string name="entrance_description">Entrance Description</string>
    <string name="write_comment_and_add_it_into_your_entrance_factor">Write comment and add it into your entrance factor:</string>
    <string name="create_pdf">Create Pdf</string>
    <string name="items">Items</string>
    <string name="if_you_have_some_items_read_their_barcode_and_otherwise_click_on_done">If you have some items, read their barcode and otherwise click on Done</string>
    <string name="select_from_the_list_below_n_and_read_help_for_each_item">Select from the list below   and read help for each item</string>
    <string name="deny">Deny</string>
    <string name="imports">Import</string>
    <string name="if_you_want_to_clear_old_data_and_import_new_one_click_on_reset_otherwise_click_on_update">If you want to clear old data and import new one, click on Reset, otherwise click on Update</string>
    <string name="reset">reset</string>
    <string name="update">update</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_to_exit_from_your_account">Do you want to exit from your account?</string>
    <string name="remove">Remove</string>
    <string name="do_you_want_to_remove_this_data">Do you want to remove this data?</string>
    <string name="photos">Photos</string>
    <string name="attach_some_photos_of_package">Attach some photos of package</string>
    <string name="add_to_list">Add to list</string>
    <string name="save_photos">Save photos</string>
    <string name="return_text">Return</string>
    <string name="if_you_want_to_continue_one_of_your_n_previous_return_process_n_please_select_from_the_list_below">If you want to continue one of your   previous return process,   please select from the list below:</string>
    <string name="add_new_return_process">Add new return process</string>
    <string name="item_name">Item Name</string>
    <string name="item_barcode">Item Barcode</string>
    <string name="amount">Amount</string>
    <string name="order_barcode">Order barCode</string>
    <string name="barcode">Barcode</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="add_this_item">Add this item</string>
    <string name="enter_co_name">Please enter the company name!</string>
    <string name="error_co_address">please enter the company address!</string>
    <string name="error_co_logo">Please add the company logo!</string>
    <string name="please_count_item">Please Count Goods and Add it into list</string>
    <string name="please_enter_name_ofitem">Please Enter Name Of New Goods</string>
    <string name="error_open_file">Error! Can not open file.</string>
    <string name="save_description_success">Description Successfully saved</string>
    <string name="user_name">User Name</string>
    <string name="package_number">Package Number</string>
    <string name="scan_atleast_one_pack">Please scan at least one package</string>
    <string name="write_comment">Please write some comment</string>
    <string name="driver_name">Driver Name</string>
    <string name="car_plate_number">Car Plate Number</string>
    <string name="date_and_time">Date and Time</string>
    <string name="scan_delivery_number">Please Scan the delivery number</string>
    <string name="delivery_number_isreaden">Delivery Number has been read before</string>
    <string name="select_csv_file">Select CSV File</string>
    <string name="add_csv_file">Pleas Add csv File that contain Data</string>
    <string name="import_item_number">Items has been imported successfully</string>
    <string name="csv_file_error">File has not 2 column</string>
    <string name="csv_file_error3">File has not 3 column</string>
    <string name="number_new_data">Number Of New Data</string>
    <string name="number_duplicate_data">Number Of Duplicate Data</string>
    <string name="select_csv_error">The specified file was not found  please select *.csv file from internal storage</string>
    <string name="no_counting_title">No record found, Please start new Counting Process</string>
    <string name="has_counting_dialog">If you want to continue one of your   previous counting process,   please select from the list below:</string>
    <string name="counter_name">Counter Name</string>
    <string name="enter_name_counting_error">please enter youre Name and valid date</string>
    <string name="add_counting_success">Counting Sheet SuccessFully Added</string>
    <string name="no_outgoing_dialog">No record found, Please start new Outgoing Process</string>
    <string name="has_outgoing_dialog">If you want to continue one of your   previous outgoing process,   please select from the list below:</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="new_outgoing_data_error">please enter driver Name, vehicle number and valid date</string>
    <string name="add_outgoing_success">Exit Sheet SuccessFully Added</string>
    <string name="no_entrace_data">No record found, Please start new Entrance Process</string>
    <string name="has_entrance_data">If you want to continue one of your   previous entrance process,   please select from the list below:</string>
    <string name="entrance_data_error">please enter User Name, entrance description and valid date</string>
    <string name="add_entrance_success">Entrance Sheet SuccessFully Added</string>
    <string name="no_return_dialog">No record found, Please start new Return Process</string>
    <string name="has_return_dialog">If you want to continue one of your   previous return process,   please select from the list below:</string>
    <string name="post_barcode">Post Barcode</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="vehicle_driver_name">Vehicle Driver Name</string>
    <string name="return_info_erron">please enter all info and valid date</string>
    <string name="return_add_success">Return Sheet SuccessFully Added</string>
    <string name="select_photo_error">please select at least one photo</string>
    <string name="max_photo_select">You can select up to four photos</string>
    <string name="add_item_error">please add at least one item</string>
    <string name="add_comment_error">please add at comment on last item and click on add button</string>
    <string name="barcode_len_error">Order barcode must have more than 4 number</string>
    <string name="pack_barcode">Package Barcode</string>
    <string name="enter_name_of_item">Please Enter Name Of New Items</string>
    <string name="counting_date">Counting Date</string>
    <string name="item_amount">Item Amount</string>
    <string name="date">Date</string>
    <string name="receiver">Receiver</string>
    <string name="read_barcode_in_return">please read item barcode and write comment</string>
    <string name="write_comment_for_this_item">please write comment for this item</string>
    <string name="logistics_company">Logistics Company</string>
    <string name="setting">Setting</string>
    <string name="name_scanner">Name scanner</string>
    <string name="name_store">Name store</string>

</resources>
