<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center|top"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="13sp"
            android:textColor="@color/black"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPostCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_number"
                android:textStyle="bold"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="15sp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/tvOrderCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_barcode"
                android:textStyle="bold"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="15sp"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/tvPostGoodsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/items"
                android:textStyle="bold"
                android:gravity="center|left"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="13sp"
                android:textColor="@color/darkGray" />
        </LinearLayout>


        <ImageView
            android:id="@+id/ivRemove"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="2dp"
            android:scaleType="fitStart"
            android:layout_gravity="top"
            android:src="@drawable/remove" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2" />

    </LinearLayout>




</LinearLayout>