<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/drawer_layout"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.ReportActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:gravity="center">
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="2"
                    android:text="@string/actions"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:id="@+id/drawer_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:src="@drawable/ic_menu" />
            </RelativeLayout>

        </LinearLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_top_curve_back">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5" />

                <TextView
                    android:id="@+id/tvEnterance"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_curve_green"
                    android:gravity="center"
                    android:text="@string/entries_of_item"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8" />

                <TextView
                    android:id="@+id/tvExit"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_curve_green"
                    android:gravity="center"
                    android:text="@string/outgoing_item"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8" />

                <TextView
                    android:id="@+id/tvControl"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_curve_green"
                    android:gravity="center"
                    android:text="@string/item_counting"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8" />

                <TextView
                    android:id="@+id/tvReturned"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_curve_green"
                    android:gravity="center"
                    android:text="@string/return_text"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"/>


            </LinearLayout>
        </RelativeLayout>



    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:layoutDirection="rtl"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/drawer_menu"/>


</android.support.v4.widget.DrawerLayout>
