<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/crd_call"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:layout_margin="2dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="horizontal"
                android:background="@drawable/titleback">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"/>
                <TextView
                    android:id="@+id/tv_imports"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="35"
                    android:text="@string/imports"
                    android:textSize="@dimen/dialog_title"
                    android:textColor="@color/green_text"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="23"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_importText"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/if_you_want_to_clear_old_data_and_import_new_one_click_on_reset_otherwise_click_on_update"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:lineSpacingExtra="10dp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:padding="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"/>




                </LinearLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:orientation="horizontal"
                android:background="@drawable/endtitleback">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
                <Button
                    android:id="@+id/bt_resetData"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:layout_margin = "2dp"
                    android:text="@string/reset"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/transparent"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:background="@color/white"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>
                <Button
                    android:id="@+id/bt_updateData"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:layout_margin = "2dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/update"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/transparent"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>